syntax = "proto3";

package dto;

option (gogoproto.testgen_all)  = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/elojah/game_02/pkg/account/dto/account.proto";

message ConnectPlayer {
	dto.Auth Auth                            = 1 [(gogoproto.nullable) = false];

	bytes PlayerID                           = 2 [(gogoproto.customtype) = "github.com/elojah/game_02/pkg/ulid.ID", (gogoproto.nullable) = false];
}

message CreatePlayer {
	dto.Auth Auth                            = 1 [(gogoproto.nullable) = false];

	bytes TemplateID                         = 2 [(gogoproto.customtype) = "github.com/elojah/game_02/pkg/ulid.ID", (gogoproto.nullable) = false];
	string Name                              = 3;
}